--- a/backend/cart-service/src/main/resources/application-prod.properties
+++ b/backend/cart-service/src/main/resources/application-prod.properties
@@ -1,10 +1,16 @@
 spring.application.name=cart-service
 server.port=8082
-# ? Hibernate ???????
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore
 spring.datasource.username=postgres
 spring.datasource.password=csc8113
 spring.datasource.driver-class-name=org.postgresql.Driver
-# ? Spring Boot ?? data.sql ???????
+
 spring.sql.init.mode=always
+
+management.endpoint.health.probes.enabled=true
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
+management.endpoints.web.exposure.include=health
+
